[package]
name = "acas"
version = "0.1.0"
authors = ["Shiven Bajpai <shiven.bajpai@gmail.com>"]
edition = "2021"
categories = ["graphics", "command-line-utilities", "game-development",  "multimedia::images"]
description = "A sprite management tool that simplifies game development"
exclude = []
keywords = ["game", "acas", "gamedev", "graphics", "benimator"]
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/shivenBajpai/acas"
rust-version = "1.56"

[workspace]
members = [
    "crates/*"
]

[features]
default = [
    "acas-core",
    "acas-compose",
    "acas-stitch"
]

acas-stitch = ["acas-internals/acas-stitch"]
acas-core = ["acas-internals/acas-core"]
acas-compose = []

[dev-dependencies]
# For comparison and benchmarks
rotsprite = "0.1.4"
criterion = "0.5.1"
# For Use in Examples
image = {workspace = true}
sdl2 = "0.35.2"

[dependencies]
acas-internals = { path = "crates/acas-internals", optional = false }

[workspace.dependencies]
image = { version = "0.24.6" }
thiserror = { version = '1.0.44'}

[[example]]
name = "sdl2-demo"
path = "examples/sdl2/sdl2-demo/main.rs"

[package.metadata.example.sdl2-demo]
name = "Sdl2 Example"
description = "A simple sdl2 demo showing acas' capabilites"
required-features = ["core","acas-stitch"]

[[example]]
name = "stitching"
path = "examples/stitching/main.rs"

[package.metadata.example.stitching]
name = "Texture Stitching example"
description = "Stitching a sword onto 3 different frames of an animation"
required-features = ["core","acas-stitch"]

[[example]]
name = "testing"
path = "examples/devtesting/main.rs"

[package.metadata.example.testing]
name = "Devtesting"
description = "An Example I use to test my code as i build it, not pushed to git"
required-features = ["core","acas-stitch"]

[[bench]]
name = "rotation_benchmark"
harness = false